# notification-service

./: README.md  pyproject.toml
clients/: forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_timezone.py  0003_alter_client_timezone.py
clients/templates/clients/: add_client.html  clients.html
mailing/: admin.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_rename_mailingmodel_mailing.py  0003_remove_mailing_filters_mailing_codes_filter_and_more.py  0004_alter_mailing_tags_filter.py  0005_remove_client_utc_offset_client_timezone_and_more.py  0006_alter_client_phone_number.py  0007_alter_message_client_id_delete_client.py  0008_mailing_celery_task_id_alter_mailing_end_time.py  0009_alter_mailing_celery_task_id.py  0010_rename_client_id_message_client_and_more.py
mailing/templates/mailing/: add_mailing.html  mailing.html
mailing/templatetags/: my_filters.py
notification_service/: __init__.py  asgi.py  celery.py  settings.py  urls.py  views.py
notification_service/templates/notification_service/: base.html  home.html
stats/: urls.py  views.py
